package com.wipro.maverick_bank.repository;

import java.util.List;

import org.springframework.data.jpa.repository.JpaRepository;

import com.wipro.maverick_bank.entity.Account;

public interface AccountRepository extends JpaRepository<Account, Long> {
	List<Account> findByCustomerProfile_Id(Long customerId);
}