@startuml
skinparam classAttributeIconSize 0

package "Service Layer" {

interface AuthService
interface UserService
interface RoleService
interface AccountService
interface TransactionService
interface BeneficiaryService
interface LoanService
interface StatementService

class AuthServiceImpl <<service>>
class UserServiceImpl <<service>>
class RoleServiceImpl <<service>>
class AccountServiceImpl <<service>>
class TransactionServiceImpl <<service>>
class BeneficiaryServiceImpl <<service>>
class LoanServiceImpl <<service>>
class StatementServiceImpl <<service>>

AuthServiceImpl ..|> AuthService
UserServiceImpl ..|> UserService
RoleServiceImpl ..|> RoleService
AccountServiceImpl ..|> AccountService
TransactionServiceImpl ..|> TransactionService
BeneficiaryServiceImpl ..|> BeneficiaryService
LoanServiceImpl ..|> LoanService
StatementServiceImpl ..|> StatementService
}

package "Repository Layer" {
class UserRepository <<repository>>
class RoleRepository <<repository>>
class AccountRepository <<repository>>
class TransactionRepository <<repository>>
class LoanRepository <<repository>>
}

AuthServiceImpl --> UserRepository
UserServiceImpl --> UserRepository
RoleServiceImpl --> RoleRepository
AccountServiceImpl --> AccountRepository
TransactionServiceImpl --> TransactionRepository
LoanServiceImpl --> LoanRepository

@enduml